# Zookeeper

./: .gitignore  Box.cpp  Box.hpp  CMakeLists.txt  Cpu.cpp  Cpu.hpp  Debug.cpp  Debug.hpp  Debugger.cpp  Debugger.hpp  Device.cpp  Device.hpp  Eeprom.cpp  Eeprom.hpp  Gpu.cpp  Gpu.hpp  HV.hpp  HandleManager.cpp  HandleManager.hpp  Hypercall.cpp  Hypercall.hpp  HypercallDispatch.cpp  Hypercalls.hpp  IOManager.cpp  IOManager.hpp  Ioctls.hpp  Kernel.cpp  Kernel.hpp  LICENSE.txt  Lpc.cpp  Lpc.hpp  Makefile  PageManager.cpp  PageManager.hpp  RetroAPI.cpp  Shared.hpp  Smbus.cpp  Smbus.hpp  ThreadManager.cpp  ThreadManager.hpp  (+14 more)
Mac/: HVMac.cpp  HVMac.hpp
NightBeliever/: C.cpp  C.hpp  CMakeLists.txt  Hypercall.cpp  Hypercall.hpp  HypercallSupport.hpp  Interrupts.cpp  Interrupts.hpp  Kernel.cpp  Kernel.hpp  KernelThunk.cpp  KernelThunk.hpp  Log.cpp  Log.hpp  Makefile  NightBeliever.hpp  TIB.cpp  TIB.hpp  bootstrap.S  entry.cpp  isr_stubs.S  liballoc.cpp  liballoc.hpp  liballoc_nightbeliever.cpp  linker.ld  mini-printf.cpp  mini-printf.hpp  nttypes.hpp  thunkgen.py
NightBeliever/XboxKernel/: Dpc.cpp  Dpc.hpp  FS.cpp  FS.hpp  HW.cpp  HW.hpp  Interrupt.cpp  Interrupt.hpp  Kernel.hpp  KernelThunk.cpp  KernelThunk.hpp  Memory.cpp  Memory.hpp  Misc.cpp  Misc.hpp  String.cpp  String.hpp  Thread.cpp  Thread.hpp  Timer.hpp  Timers.cpp  nttypes.hpp
